Client: working on shipments

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -16,7 +16,8 @@ application.langs="en"
 play.http.filters = "org.biobank.Filters"
 
 # when set to true, the actors will load test data
-application.loadTestData=true
+application.testData.load = true
+application.testData.loadSpecimens = true
 
 # Database configuration
 # ~~~~~
